--- a/HR projectSS/HRproject/login.html
+++ b/HR projectSS/HRproject/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <h2><img src="/images/Moderntech Solutions.png" alt="Logo" class="logo-img"></h2><br>
+            <h2><img src="/HR projectSS/images/Moderntech Solutions.png" alt="Logo" class="logo-img"></h2><br>
              <h4>Please log in to continue</h4>
         </div>
         
