--- a/HR projectSS/HRproject/splash.html
+++ b/HR projectSS/HRproject/splash.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome | HR Management System</title>
     <link rel="stylesheet" href="/HR projectSS/styling/styles.css">
-    <script defer src="/script/splash.js"></script>
+    <script defer src="/HR projectSS/script/splash.js"></script>
 </head>
 <body>
     <!-- Splash Screen Container -->
