--- a/HR projectSS/HRproject/index.html
+++ b/HR projectSS/HRproject/index.html
@@ -11,7 +11,7 @@
     <!-- Chart.js Library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script src="/HR projectSS/script/script.js"></script>
+    <script src="/HR projectSS/HR projectSS/script/script.js"></script>
 </head>
 <body>
     <!-- Navbar Section -->
