--- a/HR projectSS/HRproject/Attendance.html
+++ b/HR projectSS/HRproject/Attendance.html
@@ -95,7 +95,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="/HR projectSS/HR projectSS/images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
+                    <img src="/images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
                     <span>Moderntech Solutions</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
