--- a/HR projectSS/HRproject/login.html
+++ b/HR projectSS/HRproject/login.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login | HR Management System</title>
-    <link rel="stylesheet" href="/HR projectSS/styling/login-style.css">
-    <script defer src="/HR projectSS/script/login-script.js"></script>
+    <link rel="stylesheet" href="/styling/login-style.css">
+    <script defer src="/script/login-script.js"></script>
 </head>
 <body>
     <div class="login-container">
         <div class="login-header">
-            <h2><img src="/HR projectSS/HR projectSS/images/Moderntech Solutions.png" alt="Logo" class="logo-img"></h2><br>
+            <h2><img src="/images/Moderntech Solutions.png" alt="Logo" class="logo-img"></h2><br>
              <h4>Please log in to continue</h4>
         </div>
         
