--- a/HR projectSS/HRproject/index.html
+++ b/HR projectSS/HRproject/index.html
@@ -11,7 +11,7 @@
     <!-- Chart.js Library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script src="/HR projectSS/HR projectSS/script/script.js"></script>
+    <script src="/script/script.js"></script>
 </head>
 <body>
     <!-- Navbar Section -->
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="/HR projectSS/images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
+                    <img src="/images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
                     <span>Moderntech Solutions</span>
                 </a>
                 
