--- a/HR projectSS/HRproject/splash.html
+++ b/HR projectSS/HRproject/splash.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome | HR Management System</title>
-    <link rel="stylesheet" href="/HR projectSS/HR projectSS/styling/styles.css">
-    <script defer src="/HR projectSS/HR projectSS/script/splash.js"></script>
+    <link rel="stylesheet" href="/styling/styles.css">
+    <script defer src="/script/splash.js"></script>
 </head>
 <body>
     <!-- Splash Screen Container -->
