--- a/splash.html
+++ b/splash.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome | HR Management System</title>
-    <link rel="stylesheet" href="/styling/styles.css">
-    <script defer src="/script/splash.js"></script>
+    <link rel="stylesheet" href="styling/styles.css">
+    <script defer src="script/splash.js"></script>
 </head>
 <body>
     <!-- Splash Screen Container -->
     <div id="splash-screen" class="splash-screen">
         <div class="content">
             <!-- Logo Image -->
-            <img src="/HR projectSS/images/Moderntech Solutions.png" alt="Logo" class="logo-img">
+            <img src="images/Moderntech Solutions.png" alt="Logo" class="logo-img">
             
             <!-- Animated Slogan -->
             <h1 class="slogan">Moderntech Solutions</h1><br>
