--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="/images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
+                    <img src="images/Moderntech back2.png" alt="Moderntech Solutions" height="40" class="me-2">
                     <span>Moderntech Solutions</span>
                 </a>
                 
